# test_kol

zad2/: Makefile  Makefilev2_SK  main.cpp  myProgram
zad3/: CMakeLists.txt
zad4/: CMakeCache.txt  CMakeLists.txt  CMakeLists2.txt  CMakeLists2daniel.txt  Makefile  cmake_install.cmake
